--- a/src/app/view/empleados/empleados.component.html
+++ b/src/app/view/empleados/empleados.component.html
@@ -252,7 +252,7 @@
     </div>
 </div>
 
-<!-- Modal modernizado para detalles del empleado - ACTUALIZADO -->
+<!-- Modal para detalles del empleado -->
 <div class="modal fade" id="userDetailsModal" tabindex="-1">
     <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content modal-moderna">
